fix: scale the fonts please to something that is usable for 10-foot uis

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>neko-terebi</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_circle,home,search,search_activity,settings,subscriptions,web"
+    />
   </head>
-  <body class="bg-black/100">
+  <body class="bg-black">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
