--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-black">
+  <body class="bg-black text-white/100">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
